src/osd/OSD.h
@@ -894,6 +894,10 @@ public:
   SafeTimer snap_sleep_timer;
 
   AsyncReserver<spg_t> snap_reserver;
+
+  Mutex scrub_sleep_lock;
+  SafeTimer scrub_sleep_timer;
+
   void queue_for_snap_trim(PG *pg);
 
   void queue_for_scrub(PG *pg) {
@@ -2012,6 +2016,11 @@ protected:
 			       Session *session);
   PG   *_lookup_lock_pg_with_map_lock_held(spg_t pgid);
   PG   *_lookup_lock_pg(spg_t pgid);
+
+public:
+  PG   *lookup_lock_pg(spg_t pgid);
+
+protected:
   PG   *_open_lock_pg(OSDMapRef createmap,
 		      spg_t pg, bool no_lockdep_check=false);
   enum res_result {
